--- a/views/home.jade
+++ b/views/home.jade
@@ -29,18 +29,52 @@ html
 
       .row
         .col-sm-6
-          h3 These computers can learn
-          p Using a deep learning framework named 'TensorFlow' computers can learn, but they will only learn what they are taught.
-          p They can be taught advanced math and linguistics, artistic tricks and effects, and more.
+          .bubble
+            h3 These computers can learn
+            p Using a deep learning system named 'TensorFlow' computers can learn, but they will only learn what they are taught.
+            p Computers can be taught advanced math and linguistics, artistic tricks and effects, and more. The biggest obstacle is only a few people can talk to them.
+            p
+              span The New York Times calls it&nbsp;
+              a(href='http://www.nytimes.com/2016/12/14/magazine/the-great-ai-awakening.html') 'The Great AI Awakening'
+
         .col-sm-6
-          h3 Command and control in your pocket
-          p Try out the latest in machine-learning research from your smartphone.
-          p TensorFlow is built on the work of many computer scientists and experts. You might not be a scientist on paper, but Superhero.TF can open up cloud computing and GPU servers to everyone.
-          
+          .bubble
+            h3 Command and control in your pocket
+            p Try out your own photos and experiments now:
+            a.btn.btn-primary(href='/experiments/skull') Skull
+            span &nbsp; &nbsp;
+            a.btn.btn-primary(href='/experiments/monster') Monster
+            span &nbsp; &nbsp;
+            a.btn.btn-primary(href='/experiments/landscape') Landscape
+            br
+            br
+            
+            p TensorFlow is built on the work of many computer scientists and experts. Superhero.TF can open up cloud computing, GPU servers, and deep learning to your smartphone.
+
+      .row
+        .col-sm-6
+          .bubble
+            h3 Madcap computing
+            p Not everything about machine learning has to be so serious. Smartphones started, in a way, with everyone carrying their music on iPods.
+            p Here you can see interesting effects, copying styles from one photo to the other.
+            img(src='/img/faces.jpg')
+            br
+            br
+
+        .col-sm-6
+          .bubble
+            h3 Open to human learning
+            p
+              span Machine learning experts&nbsp;
+              a(href='http://www.commerce.senate.gov/public/index.cfm/2016/11/commerce-announces-first-artificial-intelligence-hearing') told Congress
+              span &nbsp;that one of the biggest challenges in AI / machine learning / deep learning research is diversity. It's difficult for anyone to break into this field as a student, as an independent researcher, as a curious person browsing the web.
+            p Here's how we fix it: we make the most powerful technology available to everyone.
+            img(src='/img/superhero.jpg')
       hr
-      small
+      small.free
         span project by&nbsp;
         a(href='https://twitter.com/mapmeld') Nick Doiron
       br
       br
-      small image CC-BY-SA Aaron Bauer
+      //
+        small image CC-BY-SA Aaron Bauer
