--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,14 @@
 body {
   padding-bottom: 25px;
+  background: linear-gradient(#105, #22a);
 }
 
 .superhero-icon img {
   max-height: 250px;
+}
+
+.jumbotron, .bubble {
+  box-shadow: 4px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .jumbotron, .jumbotron small {
@@ -19,9 +24,41 @@ body {
 
 .jumbotron h2 > span {
   border-bottom: 1px solid #ffe63a;
-  padding-bottom: 2px;
+  padding-bottom: 3px;
+}
+
+.jumbotron h1, .jumbotron h2 em {
+  font-family: 'Comic Sans MS';
 }
 
 .center {
   text-align: center;
+}
+
+.bubble {
+  background-color: #fff;
+  border-radius: 16px;
+  padding: 12px 25px 12px 25px;
+  margin: 0 12px 12px 12px;
+}
+
+.bubble img {
+  max-width: 100%;
+}
+
+small.free {
+  color: #fff;
+}
+
+@media (max-width: 800px) {
+  .jumbotron h2 {
+    display: inline-block;
+    float: none !important;
+    margin-top: 12px;
+    font-size: 190%;
+  }
+
+  .jumbotron h2 span {
+    white-space: pre;
+  }
 }
