set up skull experiment on the NodeJS side

--- a/views/home.jade
+++ b/views/home.jade
@@ -4,7 +4,8 @@ html
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title Superhero.TF - TensorFlow for all y'all
-    link(rel='stylesheet', href='/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/css/lib/bootstrap.min.css')
+    link(rel='stylesheet', href='/css/lib/photobooth.min.css')
     link(rel='stylesheet', href='/css/style.css')
   body
     .container
@@ -45,7 +46,7 @@ html
             span &nbsp; &nbsp;
             a.btn.btn-primary(href='/experiments/monster') Monster
             span &nbsp; &nbsp;
-            a.btn.btn-primary(href='/experiments/landscape') Landscape
+            a.btn.btn-primary(href='/experiments/analogy') Landscape
             br
             br
             
