improve on blurring

--- a/views/anyface.jade
+++ b/views/anyface.jade
@@ -28,6 +28,12 @@ html
         .col-sm-4
           h4 Target face
           strong This is what you're being blended with!
+          br
+          small Select a file
+          br
+          input.submit-target(type='file')
+          br
+          br
           img.target(src='/img/monster-Ap.jpg')
         
         .col-sm-4
