--- a/static/css/home.css
+++ b/static/css/home.css
@@ -7,12 +7,11 @@ img.original, canvas, img.target {
 }
 
 #photobooth {
-  width: 400px;
-  min-height: 300px;
   background: #ccc;
   font-size: 14pt;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 10px;
+  max-width: 400px;
 }
 
 #photobooth ul {
