--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,10 @@ body {
   box-shadow: 4px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
+.bubble .btn {
+  margin-top: 10px;
+}
+
 .jumbotron, .jumbotron small {
   padding-top: 5px;
   border-radius: 0 !important;
