sketch out new experiments and descriptions

--- a/views/analogy.jade
+++ b/views/analogy.jade
@@ -42,6 +42,7 @@ block visibleform
         
 block hiddenform
   input(type='hidden', name='_csrf', value=csrfToken)
+  input(type='hidden', name='experiment', value='analogy')
   input(type='hidden', name='original')
   input(type='hidden', name='mask')
   input(type='hidden', name='new-mask')
