--- a/views/home.jade
+++ b/views/home.jade
@@ -57,20 +57,25 @@ html
         .col-sm-6
           .bubble
             h3 Madcap Computing
-            p Not every high-tech program has to be serious. It took the iPod and other MP3 players to usher in smartphones and the app store.
-            p We can gain a lot (and have fun) by bending advanced technology to artistic and eccentric applications.
+            p Not every high-tech program needs to be serious. It took the iPod and video games to pave the way for smartphones and GPUs.
+            p We gain a lot (and have fun) by bending advanced technology to artistic and eccentric applications.
             a(href='/experiments/monster')
               img(src='/img/faces.jpg', alt='Making a persons face look like a zombie using TensorFlow')
               br
               small Monster Experiment
+            hr
+            p
+              span Over time, I plan to make many of the projects from&nbsp;
+              a(href='https://github.com/jtoy/awesome-tensorflow') awesome-tensorflow
+              span &nbsp;list available to the public. If you've set up a cool project of your own, please reach out!
 
         .col-sm-6
           .bubble
-            h3 It's about human learning
+            h3 This is about human learning
             p
               span Machine learning experts&nbsp;
               a(href='http://www.commerce.senate.gov/public/index.cfm/2016/11/commerce-announces-first-artificial-intelligence-hearing') told Congress
-              span &nbsp;that one of the biggest challenges in AI / machine learning / deep learning research is diversity. It's difficult for anyone to break into this field as a student, as an independent researcher, as a curious person browsing the web.
+              span &nbsp;that one of the biggest challenges in AI / machine learning / deep learning research is diversity. It's difficult for anyone to make things in this space if you're a student, independent researcher, or hobbyist without deep pockets.
             p Here's how we fix it: we make the most powerful technology available to everyone.
             img(src='/img/superhero.jpg')
       hr
