--- a/views/home.jade
+++ b/views/home.jade
@@ -36,7 +36,7 @@ html
               span Computers are making advances in math and linguistics, artistic tricks and effects, and strategy games.
               span The New York Times calls it&nbsp;
               a(href='http://www.nytimes.com/2016/12/14/magazine/the-great-ai-awakening.html') 'The Great AI Awakening'
-            p The biggest obstacle is that only a few of us have access to talk to the machines.
+            p The biggest obstacle is that only a few experts have had access to the machines.
 
         .col-sm-6
           .bubble
@@ -46,12 +46,12 @@ html
             span &nbsp; &nbsp;
             a.btn.btn-primary(href='/experiments/analogy') Landscape
             span &nbsp; &nbsp;
-            a.btn.btn-primary(href='/experiments/anyface') Any Face
+            a.btn.btn-primary(href='/experiments/anyface') More Faces
             span &nbsp; &nbsp;
             a.btn.btn-primary(href='/experiments/shakespeare') Shakespeare
             br
             br
-            p Superhero is based on TensorFlow, the product of many computer scientists and experts.
+            p Superhero is built on TensorFlow, the product of many computer scientists and experts.
 
       .row
         .col-sm-6
@@ -67,7 +67,7 @@ html
             p
               span Over time, I plan to make many of the projects from&nbsp;
               a(href='https://github.com/jtoy/awesome-tensorflow') awesome-tensorflow
-              span &nbsp;list available to the public. If you've set up a cool project of your own, please reach out!
+              span &nbsp;list available to the public. If you're a researcher with a cool project of your own, please reach out!
 
         .col-sm-6
           .bubble
@@ -77,12 +77,18 @@ html
               a(href='http://www.commerce.senate.gov/public/index.cfm/2016/11/commerce-announces-first-artificial-intelligence-hearing') told Congress
               span &nbsp;that one of the biggest challenges in AI / machine learning / deep learning research is diversity. It's difficult for anyone to make things in this space if you're a student, independent researcher, or hobbyist without deep pockets.
             p Here's how we fix it: we make the most powerful technology available to everyone.
-            img(src='/img/superhero.jpg')
+            img.half(src='/img/superhero.jpg')
       hr
-      small.free
-        span project by&nbsp;
-        a(href='https://twitter.com/mapmeld') Nick Doiron
+      .row
+        .col-sm-12
+          .bubble
+            p
+              span This website is not affiliated with Google or the TensorFlow team. Project by&nbsp;
+              a(href='https://twitter.com/mapmeld') Nick Doiron
+              span .
+            p
+              span You can help Superhero.TF reach more people by sending $ on GoFundMe.
       br
       br
       //
-        small image CC-BY-SA Aaron Bauer
+        small cartoon superhero image CC-BY-SA Aaron Bauer
